exclusive gateway implemented ok