@@ -1,8 +1,6 @@
 package com.abada.engine.api;
 
 import com.abada.engine.context.UserContextProvider;
-import com.abada.engine.core.model.TaskInstance;
-import com.abada.engine.util.BpmnTestUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,7 +15,6 @@ import org.springframework.test.context.ActiveProfiles;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -41,14 +38,24 @@ class TaskApiTest {
         return "http://localhost:" + port + "/abada/api/v1/tasks";
     }
 
-    private void  deployAndStartProcess() throws Exception {
+    private static HttpHeaders jsonHeaders() {
+        HttpHeaders h = new HttpHeaders();
+        h.setContentType(MediaType.APPLICATION_JSON);
+        return h;
+    }
+
+    private static HttpHeaders formHeaders() {
+        HttpHeaders h = new HttpHeaders();
+        h.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
+        return h;
+    }
+
+    private void deployAndStartProcess() throws Exception {
         // Deploy the process
         ByteArrayResource file = new ByteArrayResource(
-                BpmnTestUtils.loadBpmnStream("recipe-cook.bpmn").readAllBytes()) {
+                com.abada.engine.util.BpmnTestUtils.loadBpmnStream("recipe-cook.bpmn").readAllBytes()) {
             @Override
-            public String getFilename() {
-                return "recipe-cook.bpmn";
-            }
+            public String getFilename() { return "recipe-cook.bpmn"; }
         };
 
         HttpHeaders deployHeaders = new HttpHeaders();
@@ -56,55 +63,100 @@ class TaskApiTest {
         MultiValueMap<String, Object> deployBody = new LinkedMultiValueMap<>();
         deployBody.add("file", file);
         HttpEntity<MultiValueMap<String, Object>> deployRequest = new HttpEntity<>(deployBody, deployHeaders);
-        restTemplate.postForEntity("http://localhost:" + port + "/abada/api/v1/processes/deploy", deployRequest, String.class);
+        ResponseEntity<String> deployResp = restTemplate.postForEntity(
+                "http://localhost:" + port + "/abada/api/v1/processes/deploy",
+                deployRequest,
+                String.class);
+        assertThat(deployResp.getStatusCode()).isIn(HttpStatus.OK, HttpStatus.CREATED);
 
-        // Start the process
-        HttpHeaders startHeaders = new HttpHeaders();
-        startHeaders.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
-        HttpEntity<String> startRequest = new HttpEntity<>("processId=recipe-cook", startHeaders);
-        ResponseEntity<String> response = restTemplate.postForEntity("http://localhost:" + port + "/abada/api/v1/processes/start", startRequest, String.class);
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        // Start the process (use the id inside the BPMN)
+        HttpEntity<String> startRequest = new HttpEntity<>("processId=recipe-cook", formHeaders());
+        ResponseEntity<String> startResp = restTemplate.postForEntity(
+                "http://localhost:" + port + "/abada/api/v1/processes/start",
+                startRequest,
+                String.class);
+        assertThat(startResp.getStatusCode()).isEqualTo(HttpStatus.OK);
     }
 
     @BeforeEach
     void setup() throws Exception {
+        // User context resolution for the API layer
         when(context.getUsername()).thenReturn("alice");
-        when(context.getGroups()).thenReturn(List.of("customers"));
+        // include a plausible group in case visibility relies on it
+        when(context.getGroups()).thenReturn(List.of("customers", "chefs"));
         deployAndStartProcess();
     }
 
     @Test
     void shouldListVisibleTasks() {
-        ResponseEntity<Object[]> response = restTemplate.getForEntity(baseUrl(), Object[].class);
+        ResponseEntity<List<TaskView>> response = restTemplate.exchange(
+                baseUrl(),
+                HttpMethod.GET,
+                null,
+                new ParameterizedTypeReference<List<TaskView>>() {}
+        );
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(response.getBody()).isNotNull();
         assertThat(response.getBody()).isNotEmpty();
+        // Optional sanity: first task is for alice
+        assertThat(response.getBody().get(0).assignee).isIn("alice", null);
     }
 
     @Test
     void shouldClaimTask() {
-        ResponseEntity<List<TaskInstance>> responseEntity = restTemplate.exchange(baseUrl(), HttpMethod.GET, null, new ParameterizedTypeReference<List<TaskInstance>>() {});
-        List<TaskInstance> tasks = responseEntity.getBody();
-        String taskId = tasks.get(0).getId();
+        List<TaskView> tasks = fetchTasks();
+        String taskId = tasks.get(0).id;
 
-        HttpHeaders claimHeaders = new HttpHeaders();
-        claimHeaders.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
-        HttpEntity<String> claimRequest = new HttpEntity<>(null, claimHeaders);
-        ResponseEntity<String> response = restTemplate.postForEntity(baseUrl() + "/claim?taskId=" + taskId, claimRequest, String.class);
-
-        assertThat(response.getStatusCode()).isIn(HttpStatus.OK, HttpStatus.BAD_REQUEST);
+        ResponseEntity<String> resp = restTemplate.postForEntity(
+                baseUrl() + "/claim?taskId=" + taskId,
+                new HttpEntity<>("", formHeaders()),
+                String.class
+        );
+        assertThat(resp.getStatusCode()).isIn(HttpStatus.OK, HttpStatus.BAD_REQUEST);
     }
 
     @Test
     void shouldCompleteTask() {
-        ResponseEntity<List<TaskInstance>> responseEntity = restTemplate.exchange(baseUrl(), HttpMethod.GET, null, new ParameterizedTypeReference<List<TaskInstance>>() {});
-        List<TaskInstance> tasks = responseEntity.getBody();
-        String taskId = tasks.get(0).getId();
+        List<TaskView> tasks = fetchTasks();
+        String taskId = tasks.get(0).id;
 
-        HttpHeaders completeHeaders = new HttpHeaders();
-        completeHeaders.setContentType(MediaType.APPLICATION_JSON);
-        HttpEntity<Map<String, Object>> completeRequest = new HttpEntity<>(Collections.emptyMap(), completeHeaders);
-        ResponseEntity<String> response = restTemplate.postForEntity(baseUrl() + "/complete?taskId=" + taskId, completeRequest, String.class);
+        // Supply the variable used by the gateway so the engine can route
+        Map<String, Object> vars = Map.of("goodOne", true);
 
-        assertThat(response.getStatusCode()).isIn(HttpStatus.OK, HttpStatus.BAD_REQUEST);
+        ResponseEntity<String> resp = restTemplate.postForEntity(
+                baseUrl() + "/complete?taskId=" + taskId,
+                new HttpEntity<>(vars, jsonHeaders()),
+                String.class
+        );
+        assertThat(resp.getStatusCode()).isIn(HttpStatus.OK, HttpStatus.BAD_REQUEST);
+    }
+
+    // ---------------------------------------------------------------------
+    // helpers
+    // ---------------------------------------------------------------------
+
+    private List<TaskView> fetchTasks() {
+        ResponseEntity<List<TaskView>> response = restTemplate.exchange(
+                baseUrl(),
+                HttpMethod.GET,
+                null,
+                new ParameterizedTypeReference<List<TaskView>>() {}
+        );
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(response.getBody()).isNotNull();
+        return response.getBody();
+    }
+
+    /**
+     * Minimal view of the task payload returned by /v1/tasks to avoid deserializing the domain model.
+     */
+    public static class TaskView {
+        public String id;
+        public String taskDefinitionKey;
+        public String name;
+        public String assignee;
+        public List<String> candidateUsers;
+        public List<String> candidateGroups;
+        public String processInstanceId;
     }
 }
